--- a/markup/partials/sections/hl2.hbs
+++ b/markup/partials/sections/hl2.hbs
@@ -3,6 +3,6 @@
         {{> svg/svg-hl2}}
     {{/content}}
     {{#content "content"}}
-        <h2 class="fw500">We work hand-in-hand with our partners to create <span class="uppercase bold">HEALTHY, EMPOWERED</span> and <span class="uppercase bold"></span>MORE PROSPEROUS</span> communities.</h2>
+        <h2 class="fw500">We work hand-in-hand with our partners to create <span class="uppercase bold">HEALTHY, EMPOWERED</span> and <span class="uppercase bold">MORE PROSPEROUS</span> communities.</h2>
     {{/content}}
 {{/extend}}
