--- a/scss/partials/_mobile.scss
+++ b/scss/partials/_mobile.scss
@@ -108,75 +108,12 @@
     border-width: 2px;
     font-size: 18px;
   }
-  // //intro
-  // .section.intro #intro-chevron {
-  //   bottom: 0px;
-  // }
-  // .catalyst svg {
-  //   margin-top: -30px;
-  // }
-  // // ceo
-  // [data-section='0'] {
-  //   .drawer-open .drawer-button_container {
-  //     right: -20px;
-  //     transform: none;
-  //     left: initial;
-  //   }
-  //   .leftDrawer {
-  //     .leftDrawer {
-  //       height: 100%;
-  //       top: 0;
-  //     }
-  //     p img {
-  //       width: 100px !important;
-  //     }
-  //   }
-  // }
-  // [data-section='0'].section .inner-frame.centered {
-  //   min-height: auto;
-  //   height: 50vh;
-  //   padding: 10px;
-  // }
-  // .drawer-open [data-section='0'] .drawer-button_container {
-  //   right: -20px;
-  //   transform: none;
-  //   left: initial;
-  // }
-
-  // [data-section='7'],
-  // [data-section='10'] {
-  //   &.section .inner-frame {
-  //     transform: translateY(60px);
-  //     hr.small {
-  //       margin-top: 20px;
-  //     }
-  //   }
-  // }
-  // [data-section='11'] {
-  //   ul.checkmarks li span {
-  //     font-size: 20px !important;
-  //   }
-  // }
-  // [data-section='12'] {
-  //   .bg img {
-  //     object-position: center right;
-  //     width: 500px;
-  //     max-width: 500px;
-  //   }
-  // }
-  // [data-section='15'] {
-  //   .large-6 {
-  //     border-right: none !important;
-
-  //     &:first-child {
-  //       border-bottom: 1px solid #ddd;
-  //     }
-  //   }
-  //   .footer {
-  //     padding-top: 20px;
-  //     p {
-  //       font-size: 14px;
-  //     }
-  //   }
-  // }
+  [data-section="0"] {
+    .gradient {
+      background: none;
+    }
+    .inner-frame {
+      padding: 0 !important;
+    }
+  }
 }
