--- a/markup/index.hbs
+++ b/markup/index.hbs
@@ -107,8 +107,8 @@ sectionData:
     image: Dreams 536_web.jpg
     caption: imageCaption caption
     toc:
-        desktop: Girl power Jane Nyathi
-        mobile: Girl power Jane Nyathi
+        desktop: Girl power
+        mobile: Girl power
         href: #one
         chapter: 6
 
