--- a/markup/partials/sections/hl4.hbs
+++ b/markup/partials/sections/hl4.hbs
@@ -1,7 +1,7 @@
 {{#extend "elements/animated-section" drawer=false}}
     {{#content 'svg'}}
         <div class="video-container">
-            <video id="video" src="../mp4/hl4-mobile-720p.mp4"></video>
+            <video id="video" preload="auto" src="../mp4/hl4-mobile-720p.mp4"></video>
             <div class="inner-grandient"></div>
             {{> svg/svg-hl4}}
         </div>
