--- a/scss/partials/_main.scss
+++ b/scss/partials/_main.scss
@@ -224,6 +224,7 @@ h6 {
     margin: 0.67em 0 0.25em;
   }
   .drawer-subtitle {
+    color: #007787;
     font-weight: 700;
     text-transform: uppercase;
     color: $orange;
