updates video play calls

--- a/markup/partials/sections/intro.hbs
+++ b/markup/partials/sections/intro.hbs
@@ -2,8 +2,9 @@
     {{#content "svg"}}
         <div class="video-container">
             <video 
+                class="slide-video"
                 src="../mp4/FHI 360 One Banner v2 1.1 JF.mp4"
-                autoplay="true" muted="muted"></video>
+                autoplay="true" muted="muted" loop="true"></video>
         </div>
     {{/content}}
     {{#content "content"}}
