add down chevron for intro

--- a/markup/partials/sections/intro.hbs
+++ b/markup/partials/sections/intro.hbs
@@ -9,5 +9,8 @@
     {{/content}}
     {{#content "content"}}
         {{> svg/svg-intro}}
+        <div id="intro-chevron" class="move-next">
+            <img width="100" src="../img/large-chevron-down.svg" alt="">
+        </div>
     {{/content}}
 {{/extend}}
