update content with feedback and edits, build

--- a/markup/index.hbs
+++ b/markup/index.hbs
@@ -29,7 +29,7 @@ sectionData:
 
   - name: Ceo Letter
     image: DSC_0533_bw_web.jpg
-    caption: imageCaption caption
+    caption: 
 
   - name: TB (Zambia)
     title: State-of-the-art TB control
@@ -38,7 +38,7 @@ sectionData:
                 <h3>Zambia</h3>
     photoCredit: Mbuto Machili/FHI 360
     image: TB_FHI360-Zambia[UTH]62_web.jpg
-    caption: imageCaption caption
+    caption: 
     toc:
         desktop: State-of-the-art TB control
         mobile: State-of-the-art TB control
@@ -50,7 +50,7 @@ sectionData:
     subtitle: <h3>Vietnam</h3>
     photoCredit: Vu Ngoc Dung/FHI 360
     image: SHIFT 8997_web.jpg
-    caption: imageCaption caption
+    caption: 
     toc:
         desktop: Leading the way in financing the HIV response
         mobile: Leading the way in financing the HIV response
@@ -64,7 +64,7 @@ sectionData:
                 <h3>United States</h3> 
     photoCredit: Leanne Gray/FHI 360
     image: Compass Rose_web.jpg
-    caption: imageCaption caption
+    caption: 
     toc:
         desktop: Youth get a second chance
         mobile: Youth get a second chance
@@ -74,9 +74,9 @@ sectionData:
   - name: Yemen
     title: An integrated response addresses urgent needs 
     subtitle: <h3>Yemen</h3>
-    photoCredit: Andrew Renneisen/Stringer/Getty Image
+    photoCredit: Andrew Renneisen/Stringer/Getty Images
     image: Yemen_GettyImages-1042306644_web.jpg
-    caption: imageCaption caption
+    caption: 
     toc:
         desktop: An integrated response addresses urgent needs
         mobile: An integrated response addresses urgent needs
@@ -92,7 +92,7 @@ sectionData:
                 <h3>Morocco</h3>
     photoCredit: Amira Azzouzi/FHI 360
     image: Career Center_-36_web.jpg
-    caption: imageCaption caption
+    caption: 
     toc:
         desktop: "You’re hired: 21st-century career centers"
         mobile: "You’re hired: 21st-century career centers"
@@ -106,7 +106,7 @@ sectionData:
                 <h3>Zimbabwe</h3>
     photoCredit: Leanne Gray/FHI 360
     image: Dreams 536_web.jpg
-    caption: imageCaption caption
+    caption: 
     toc:
         desktop: Girl power
         mobile: Girl power
@@ -118,7 +118,7 @@ sectionData:
     subtitle: <h3>Laos</h3>
     photoCredit: Hadynyah/Getty Images
     image: NTDs_GettyImages-940751048_web.jpg
-    caption: imageCaption caption
+    caption: 
     toc:
         desktop: Moving closer to wiping out neglected diseases
         mobile: Moving closer to wiping out neglected diseases
@@ -130,7 +130,7 @@ sectionData:
     subtitle: <h3>Nigeria</h3>
     photoCredit: Kunle Lawal/FHI 360
     image: RANA 96_web.jpg
-    caption: imageCaption caption
+    caption: 
     toc:
         desktop: Literacy improved through local language learning
         mobile: Literacy improved through local language learning
@@ -142,9 +142,9 @@ sectionData:
   - name: Ventures
     title: FHI Ventures is launched to scale impact
     subtitle: 
-    photoCredit: TBD
+    photoCredit: FHI 360
     image: ventures.jpeg
-    caption: imageCaption caption
+    caption: 
     toc:
         desktop: FHI Ventures is launched to scale impact
         mobile: FHI Ventures is launched to scale impact
@@ -156,7 +156,7 @@ sectionData:
     subtitle:
     photoCredit: Leanne Gray/FHI 360
     image: CTI-microneedlepatch_web.jpg
-    caption: imageCaption caption
+    caption: 
     toc:
         desktop: Groundbreaking contraceptive technologies
         mobile: Groundbreaking contraceptive technologies
@@ -166,9 +166,10 @@ sectionData:
   - name: AMD (Ethiopia & Mozambique)
     title: Evidence to avert maternal and newborn deaths
     subtitle: <h3>Ethiopia and Mozambique</h3>
-    photoCredit: © UNICEF Ethiopia/2013/Tsegaye
+    photoCredit: |
+                   <a href="https://www.flickr.com/photos/unicefethiopia/8427009988/">Tsegaye/UNICEF Ethiopia</a> (<a href="https://creativecommons.org/licenses/by-nc-nd/2.0/">CC BY-NC-ND 2.0</a>)
     image: Digital AMDD_8427009988_ba45a790c2_o_web.jpg
-    caption: imageCaption caption
+    caption: 
     toc:
         desktop: Evidence to avert maternal and newborn deaths
         mobile: Evidence to avert maternal and newborn deaths
@@ -180,7 +181,7 @@ sectionData:
     subtitle: <h3>Tanzania and Zanzibar</h3>
     photoCredit: Sergio Somerville/FHI 360
     image: ar2018-m360-mobileapp_web.jpg
-    caption: imageCaption caption
+    caption: 
     toc:
         desktop: Data drives impact
         mobile: Data drives impact
@@ -202,6 +203,7 @@ sectionData:
       <img data-moveup src="../img/icons/arrowup-icon.svg" />
       <img data-movedown src="../img/icons/arrowup-icon.svg" />
     </nav>
+    <div class="back-to-top">Back To Top</div>
     <div id="fullpage">
       {{#each sectionData}}
         {{#eq  this.name "Intro" }}
