--- a/markup/partials/drawerContent/Girl-power.hbs
+++ b/markup/partials/drawerContent/Girl-power.hbs
@@ -1,11 +1,11 @@
 <h1 class="drawer-title">Girl power</h1> 
 <p class="drawer-subtitle"><strong class="uppercase">Jane Nyathi<br>
 Zimbabwe</strong></p>
-<p><img src="http://fhi360internalnewsletters.azurewebsites.net/ar-2018/Dreams%20546_DRAWER_web.jpg" alt="Young woman having a conversation with an adolescent girl.">Girls and young women can be powerful agents for change, but far too many are denied opportunities to develop the self-confidence that is key to taking control of their destinies.</p>
+<p><img src="../img/slides/Matopo.jpeg" alt="Young woman having a conversation with an adolescent girl.">Girls and young women can be powerful agents for change, but far too many are denied opportunities to develop the self-confidence that is key to taking control of their destinies.</p>
 <p>Jane Nyathi is not one of them. The 24-year-old is an assistant program officer for the Determined, Resilient, Empowered, AIDS-free, Mentored and Safe Women (DREAMS) public-private <a href="https://www.pepfar.gov/partnerships/ppp/dreams/" target="_blank">partnership</a> in Zimbabwe.</p>
 <p>Based in Bulawayo, <strong>Zimbabwe's</strong> second largest city, Jane, along with her colleagues, focuses on reducing new HIV infections among adolescent girls and young women ages 15 to 24 in six high-HIV-burden districts.</p>
 <p>Through DREAMS, FHI 360 delivers a comprehensive curriculum that focuses on HIV prevention, positive gender norms and building social assets, including social safety nets through mentors, peer groups, civic engagement and access to health information and services. The curriculum is targeted toward adolescent girls and young women and their sexual partners.</p>
-<p>The need is great, and obstacles for young women, who should be looking toward the future with hope and optimism, can seem insurmountable. Poverty, gender inequality, sexual violence, social isolation, and limited schooling increase adolescent girls' and young women's vulnerability to HIV. "Young women in Zimbabwe are sometimes in relationships so that they can survive," said Jane. "It is difficult in Zimbabwe for you to even have a dollar to spend on anything or to buy credit for your phone."</p>
+<p>The need is great, and obstacles for young women, who should be looking toward the future with hope and optimism, can seem insurmountable. Poverty, gender inequality, sexual violence, social isolation and limited schooling increase adolescent girls' and young women's vulnerability to HIV. "Young women in Zimbabwe are sometimes in relationships so that they can survive," said Jane. "It is difficult in Zimbabwe for you to even have a dollar to spend on anything or to buy credit for your phone."</p>
 <h2>Building confidence and skills</h2>
 <p>Jane has daily conversations with adolescent girls about how to access sexual and reproductive health and HIV services. She talks with community leaders about changing the gender norms and stigmas attached to using reproductive health services. She works with educational service providers who help adolescent girls go back to school or receive vocational training. And, she also helps adolescent girls develop their own income-generating activities.
 </p>
@@ -16,6 +16,6 @@ Zimbabwe</strong></p>
 <p>Watch <a href="https://www.icfphub.org/class/livestream-morning-plenary/?wcs_timestamp=1542097800" target="_blank">Jane's participation</a> at the conference.</p>
 <hr>
 <p><strong>Project:</strong> Determined, Resilient, Empowered, AIDS-free, Mentored and Safe Women (DREAMS) </p>
-<p><strong>Funder:</strong> USAID/U.S. President&rsquo;s Emergency Plan for AIDS Relief</p>
+<p><strong>Funder:</strong> USAID, U.S. President&rsquo;s Emergency Plan for AIDS Relief</p>
 <hr>
-<p>Photo credit: Leanne Gray/FHI 360</p>
+<p>Photo credit: Courtesy of Jane Nyathi</p>
