fix missing html in photo cred

--- a/markup/partials/elements/simple-section.hbs
+++ b/markup/partials/elements/simple-section.hbs
@@ -1,7 +1,7 @@
 <section class="section" data-section="{{this.sectionIndex}}" {{#if toc}}data-chapter="chapter-{{toc.chapter}}"{{/if}}>
   {{#if photoCredit}}
     <div class="photo-credits">
-      <h6><span>Photo:</span>{{photoCredit}}</h6>
+      <h6><span>Photo:</span>{{{photoCredit}}}</h6>
     </div>
     <div class="photo-credit-container">
         <div class="photo-credit-trigger grid-x grid-padding-x align-middle">
