update movile drawer close button position

--- a/scss/partials/_mobile.scss
+++ b/scss/partials/_mobile.scss
@@ -75,7 +75,7 @@
     width: 90%;
   }
   .drawer-open .drawer-button_container {
-    left: 100%;
+    left: 90vw;
     display: inline-table;
   }
   #rightSideBar {
