--- a/markup/partials/sections/intro.hbs
+++ b/markup/partials/sections/intro.hbs
@@ -3,8 +3,9 @@
         <div class="video-container">
             <video 
                 class="slide-video"
-                src="../mp4/FHI 360 One Banner v2 1.1 JF.mp4"
-                autoplay="true" muted="muted" loop="true"></video>
+                autoplay="true" muted="muted" loop="true">
+                <source src="https://player.vimeo.com/external/334730760.hd.mp4?s=a932f7f96a713cb45b54fd7df31e2d522df3989d&profile_id=174"  type="video/mp4">
+            </video>
         </div>
     {{/content}}
     {{#content "content"}}
